TI/while0/src/main/java/fh/aachen/praktikum2/While0.java
/* While0.java */
/* Generated By:JavaCC: Do not edit this line. While0.java */
package fh.aachen.praktikum2;

import java.util.Objects;public class While0 implements While0Constants {

  public static void main(String[] args) throws ParseException {
    While0 parser = new While0(System.in);
    parser.runParser();
  }

  final public void while0Func() throws ParseException {URMStorage storage = new URMStorage();
    header(storage);
    localVars(storage);
    alpha(storage);
    jj_consume_token(0);
System.out.println(storage.toURMCode());
}

  final public void header(URMStorage storage) throws ParseException {Token t;
    t = jj_consume_token(VARIABLE);
storage.setProgramName(t.image);
    jj_consume_token(OPENING_BRACKET);
    jj_consume_token(IN);
    varList(storage);
    jj_consume_token(SEMICOLON);
    jj_consume_token(OUT);
    singleVar(storage, true);
    jj_consume_token(CLOSING_BRACKET);
    jj_consume_token(SEMICOLON);
}

  final public void localVars(URMStorage storage) throws ParseException {
    jj_consume_token(LOC);
    jj_consume_token(OPENING_BRACKET);
    varList(storage);
    jj_consume_token(CLOSING_BRACKET);
    jj_consume_token(SEMICOLON);
}

  final public void varList(URMStorage storage) throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARIABLE:{
      singleVar(storage, false);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        singleVar(storage, false);
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
}

  final public void singleVar(URMStorage storage, boolean outVar) throws ParseException {Token t;
    t = jj_consume_token(VARIABLE);
if(outVar){
            storage.addOutputVariable(t.image);
        } else {
            storage.addVariable(t.image);
        }
}

  final public void alpha(URMStorage storage) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:{
      whileLoop(storage);
      break;
      }
    case VARIABLE:{
      valueAssignment(storage);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMICOLON:{
      jj_consume_token(SEMICOLON);
      alpha(storage);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
}

  final public void whileLoop(URMStorage storage) throws ParseException {Token from;
    Token to;
    jj_consume_token(WHILE);
    from = jj_consume_token(VARIABLE);
    jj_consume_token(NEQ);
    to = jj_consume_token(VARIABLE);
URMStorage.EnterWhile statement = storage.enterWhileLoop(from.image, to.image);
    jj_consume_token(DO);
    jj_consume_token(BEGIN);
    alpha(storage);
    jj_consume_token(END);
storage.leaveWhileLoop(statement);
}

  final public void valueAssignment(URMStorage storage) throws ParseException {Token first;
    Token second;
    first = jj_consume_token(VARIABLE);
    jj_consume_token(EQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 19:{
      jj_consume_token(19);
storage.addAssignmentZero(first.image);
      break;
      }
    case VARIABLE:{
      second = jj_consume_token(VARIABLE);
      jj_consume_token(20);
      jj_consume_token(21);
if(second.image != null && !Objects.equals(first.image,second.image)){System.out.println("First: "+ first.image);
        {if (true) throw new IllegalArgumentException();}}
        storage.addAssignmentPlusOne(first.image);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public boolean runParser() throws ParseException {
    while0Func();
System.out.println("Correct While0-Program");
    {if ("" != null) return true;}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public While0TokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x4000,0x40000,0x40080,0x2000,0xc0000,};
	}

  /** Constructor with InputStream. */
  public While0(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public While0(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new While0TokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public While0(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new While0TokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new While0TokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public While0(While0TokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(While0TokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[22];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 5; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 22; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
